--- a/UploadCenter/Web.config
+++ b/UploadCenter/Web.config
@@ -9,26 +9,26 @@
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 	</configSections>
-	
+
 	<connectionStrings>
 		<add name="UploadDbConnection" providerName="System.Data.SqlServerCe.4.0" connectionString="Data Source=|DataDirectory|UploadCenterDb.sdf" />
 	</connectionStrings>
-	
+
 	<system.web>
-		
+
 		<compilation debug="true" targetFramework="4.0" />
-		
+
 		<authentication mode="Forms">
 			<forms loginUrl="~/account/login" timeout="2880" defaultUrl="~/" />
 		</authentication>
-		
+
 		<!-- Maximum length is 100 MB-->
 		<httpRuntime maxRequestLength="102400" executionTimeout="3600" />
-		
+
 		<customErrors mode="RemoteOnly" defaultRedirect="~/content/error.html" />
-		
+
 	</system.web>
-	
+
 	<system.webServer>
 		<modules runAllManagedModulesForAllRequests="true" />
 		<security>
@@ -37,8 +37,12 @@
 				<requestLimits maxAllowedContentLength="104857600" />
 			</requestFiltering>
 		</security>
+		<staticContent>
+			<remove fileExtension=".woff" />
+			<mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+		</staticContent>
 	</system.webServer>
-	
+
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
